--- a/php-ingress.yaml
+++ b/php-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: php
 spec:
     rules:
-      - host: php.example.local
+      - host: php.tesch.loc
         http:
           paths:
           - path: /
